<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/add_img"
            android:src="@drawable/users"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:background="#9ecf6a"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"/>

        <EditText
            android:id="@+id/nameET"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ageET"
            android:hint="@string/enter_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <EditText
            android:id="@+id/genderET"
            android:hint="Enter phone no"
            android:inputType="number"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/idET"
            android:hint="@string/enter_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

        <Button
            android:id="@+id/updateBtn"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add"
            android:text="@string/update_data"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="15sp"/>

    </LinearLayout>


</LinearLayout>