<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gym"
    android:layout_gravity="center">
    <ImageView
        android:id="@+id/img_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@drawable/trainee"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:text="Trainee Information"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textColor="#9be7cc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"/>


            <EditText
                android:id="@+id/nameET"
                android:layout_marginTop="35dp"
                android:hint="@string/enter_name"
                android:textStyle="bold"
                android:textColor="#100"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#ce8282"/>

            <EditText
                android:id="@+id/ageET"
                android:hint="@string/enter_age"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="#ce8282"
                android:inputType="number"/>



        <EditText
            android:id="@+id/genderET"
            android:hint="Enter phone no"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="#ce8282"
            android:inputType="number"/>

        <Button
            android:id="@+id/saveBtn"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_add"
            android:text="@string/save_data"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/displayBtn"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_display"
            android:text="@string/display_data"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>